syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

package shared;
option go_package = "grpc/v1";

enum Network {
  ARBITRUM = 0;
  OPTIMISM = 1;
  BinanaceBNB = 2;
  Etherium = 3;
  POLIGON = 4;
  AVALANCHE = 5;
}

enum Token {
  USDT = 0;
  ETH = 1;
  USDC = 2;
  STG = 3;
  BNB = 4;
  MATIC = 5;
  AVAX = 6;
}



enum ProcessStatus {
  StatusReady = 0;
  StatusRunning = 1;
  StatusError = 2;
  StatusDone = 3;
  StatusStop = 4; // delete
  StatusRetry = 5;
}

enum ProfileAccountType {
  AccountDiscord = 0;
  AccountOkex = 1;
  AccountEmail = 2;
}